fix price configurable product

--- a/app/design/frontend/pure/living/template/catalog/product/view.phtml
+++ b/app/design/frontend/pure/living/template/catalog/product/view.phtml
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="price-info">
-                    <?php // echo $this->getPriceHtml($_product); ?>
+                    <?php echo $this->getPriceHtml($_product); ?>
                     <?php echo $this->getChildHtml('bundle_prices') ?>
                     <?php echo $this->getTierPriceHtml() ?>
                 </div>
