--- a/skin/frontend/pure/living/css/styles-ie8.css
+++ b/skin/frontend/pure/living/css/styles-ie8.css
@@ -4746,6 +4746,10 @@ p.product-name a:hover {
 .product-options dt {
   margin: 10px 0 3px;
   font-weight: normal;
+  float: left;
+}
+.product-options dt label {
+  width: 90px;
 }
 
 .product-options dt:first-child {
@@ -4811,8 +4815,9 @@ p.product-name a:hover {
 }
 
 .product-options dd select {
-  width: 330px;
+  /*width: 330px;*/
   max-width: 100%;
+  font-size: 12px;
 }
 
 .product-options ul.options-list {
