--- a/skin/frontend/pure/living/css/styles-ie8.css
+++ b/skin/frontend/pure/living/css/styles-ie8.css
@@ -4750,6 +4750,7 @@ p.product-name a:hover {
 }
 .product-options dt label {
   width: 90px;
+  padding-left: 4px;
 }
 
 .product-options dt:first-child {
