--- a/skin/frontend/pure/living/css/styles.css
+++ b/skin/frontend/pure/living/css/styles.css
@@ -5717,6 +5717,7 @@ p.product-name a:hover {
 }
 .product-options dt label {
   width: 90px;
+  padding-left: 4px;
 }
 
 .product-options dt:first-child {
