--- a/skin/frontend/pure/living/scss/layout/_header-account.scss
+++ b/skin/frontend/pure/living/scss/layout/_header-account.scss
@@ -91,6 +91,11 @@
 #header-account {
     display:block;
     padding: 5px 0;
+    
+    .links {
+        padding: 0 70px;
+    }
+    
 }
 
 #header-account a {
