--- a/skin/frontend/pure/living/scss/mixin/_typography.scss
+++ b/skin/frontend/pure/living/scss/mixin/_typography.scss
@@ -106,7 +106,7 @@
 }
 
 @mixin pageTitle() {
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-size: 24px;
     font-weight: 600;
     color: $c-text;
